--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Albino</h1>
+	<br>
+	<p>Overview</p>
+	<ol>
+		<li><i>A</i></li>
+		<li><i>B</i></li>
+		<li><i>C</i></li>
+		<li><i>D</i></li>
+		<li><i>E</i></li>
+	</ol>
+	<ul>
+		<li><i>A</i></li>
+		<li><i>B</i></li>
+		<li><i>C</i></li>
+		<li><i>D</i></li>
+		<li><i>E</i></li>
+		
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
